--- a/recovery/etc/init.recovery.qcom.rc
+++ b/recovery/etc/init.recovery.qcom.rc
@@ -4,6 +4,8 @@ on early-init
 on init
     # exfat
     insmod /system/lib/modules/texfat.ko
+    # So dm-crypt tables can load
+    insmod /system/lib/modules/dm-crypt.ko
 
 on boot
     start choice_fn
