Use stock module for exfat support

--- a/recovery/etc/init.recovery.qcom.rc
+++ b/recovery/etc/init.recovery.qcom.rc
@@ -1,7 +1,6 @@
 on early-init
-    setenforce permissive
-
-on init
+    # Load Tuxera exFAT module
+    insmod /system/lib/modules/texfat.ko
     # Need module to load dm-crypt tables
     insmod /system/lib/modules/dm-crypt.ko
 
